--- a/Dommy.Extensions.Kinect/Dommy.Extensions.Kinect.csproj
+++ b/Dommy.Extensions.Kinect/Dommy.Extensions.Kinect.csproj
@@ -37,8 +37,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Kinect, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Speech, Version=11.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Ninject, Version=3.0.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
@@ -63,16 +61,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IJointType.cs" />
+    <Compile Include="IKinectSkeletonListener.cs" />
+    <Compile Include="ISkeleton.cs" />
     <Compile Include="ISkeletonListener.cs" />
     <Compile Include="RecordSkeletonScenarioDescription.cs" />
     <Compile Include="HelloSkeletonCheck.cs" />
     <Compile Include="ISkeletonCheck.cs" />
     <Compile Include="KinectScenarioSyntax.cs" />
-    <Compile Include="KinectSensorSelector.cs" />
-    <Compile Include="KinectSkeletonListener.cs" />
     <Compile Include="KinectSkeletonTrigger.cs" />
-    <Compile Include="KinectSpeechToText.cs" />
-    <Compile Include="MicrosoftTextToSpeech.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HelloScenarioDescription.cs" />
   </ItemGroup>
