--- a/Dommy.Web/packages.config
+++ b/Dommy.Web/packages.config
@@ -36,5 +36,6 @@
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="RazorEngine" version="3.4.1" targetFramework="net45" />
   <package id="WebActivator" version="1.5.3" targetFramework="net45" />
 </packages>
