--- a/Dommy.Web/Views/Web.config
+++ b/Dommy.Web/Views/Web.config
@@ -16,6 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="Dommy.Business.Tools"/>
         <add namespace="Dommy.Web" />
       </namespaces>
     </pages>
