--- a/Dommy.Business.Test/Dommy.Business.Test.csproj
+++ b/Dommy.Business.Test/Dommy.Business.Test.csproj
@@ -81,16 +81,19 @@
   <ItemGroup>
     <Compile Include="BaseTest.cs" />
     <Compile Include="Configs\ConfiguratorTest.cs" />
+    <Compile Include="Configs\ConfigureTest.cs" />
     <Compile Include="FreeboxScenarioDescriptionTest.cs" />
     <Compile Include="PrivateAccessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MockWebRequest.cs" />
     <Compile Include="Scenarios\WeatherScenarioDescriptionTest.cs" />
+    <Compile Include="Scripts\ScriptEngineConfigTest.cs" />
     <Compile Include="Services\ClientTest.cs" />
     <Compile Include="SpeechListenerTest.cs" />
     <Compile Include="Speech\SpeechToTextConfigTest.cs" />
     <Compile Include="Tools\AsyncHelperTest.cs" />
     <Compile Include="Triggers\SpeechTriggerTest.cs" />
+    <Compile Include="WebHost\WebServerHostTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dommy.Business\Dommy.Business.csproj">
