--- a/Dommy.Web/Dommy.Web.csproj
+++ b/Dommy.Web/Dommy.Web.csproj
@@ -195,6 +195,10 @@
     <Content Include="Global.asax" />
     <Content Include="Css\Dommy.less" />
     <None Include="Scripts\jquery-2.1.0.intellisense.js" />
+    <Content Include="Images\FlecheB.png" />
+    <Content Include="Images\FlecheBD.png" />
+    <Content Include="Images\FlecheD.png" />
+    <Content Include="Images\FlecheHG.png" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
     <Content Include="Scripts\jquery.signalR-1.1.2.min.js" />
