--- a/Dommy.Business/Dommy.Business.csproj
+++ b/Dommy.Business/Dommy.Business.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Scenarios\AboutScenarioDescription.cs" />
     <Compile Include="Scenarios\AgainScenarioDescription.cs" />
     <Compile Include="Scenarios\DommyScenarioDescription.cs" />
+    <Compile Include="Scenarios\OpenCloseScenarioDescription.cs" />
     <Compile Include="Scenarios\OnOffLightScenarioDescription.cs" />
     <Compile Include="Scenarios\TemperatureScenarioDescription.cs" />
     <Compile Include="Scenarios\UsbUirtScenarioDescription.cs" />
@@ -182,6 +183,7 @@
     <Compile Include="Scenarios\InternetScenarioDescription.cs" />
     <Compile Include="SentenceAction.cs" />
     <Compile Include="Syntax\Gender.cs" />
+    <Compile Include="Syntax\ElementName.cs" />
     <Compile Include="Syntax\RoomName.cs" />
     <Compile Include="Scenarios\TimeScenarioDescription.cs" />
     <Compile Include="Scenarios\TvScenarioDescription.cs" />
